AXIS2C-791: Fix http_transport_sender.c, engine.c, op_client.c to preserve and     return error status from send, rather than bashing it trying to receive     after send failed.